# deep-search-agent

./: .env.example  .gitignore  NEW_STRUCTURE.md  README.md  main.py  pyproject.toml  requirements.txt
src/deep_search_agent/: __init__.py
src/deep_search_agent/agents/: deep_search_agent.py  types.py
src/deep_search_agent/agents/steps/: aggregate.py  plan.py  search.py  summarize.py
src/deep_search_agent/cli/: app.py
src/deep_search_agent/config/: config.py  settings.py
src/deep_search_agent/context/: memory.py
src/deep_search_agent/infra/: cache.py  logger.py  rate_limiter.py
src/deep_search_agent/models/: base.py  local_backend.py  openai_backend.py
src/deep_search_agent/prompts/: search_prompt.py  summarize_prompt.py  system.py
src/deep_search_agent/retrieval/: base.py  crawler.py  rag.py  stub.py  web_search.py
src/deep_search_agent/tools/: firecrawl_client.py  web_search_tool.py
src/deep_search_agent/utils/: text.py  timing.py
src/deep_search_agent/workflows/: basic.py  langgraph_based.py  production.py
tests/performance/: test_end_to_end.py
tests/unit/: test_agents.py  test_cli.py  test_models.py  test_retrieval.py
